cot/tests/db_testing/snapshots/migrations/db__db_testing__migrations__migration_engine_rollback_includes_dependent_apps_rollback.snap
---
source: cot/tests/db_testing/migrations.rs
expression: rollback_output
---
[1m[95mRolling Back[0m Migration rollback_dependent::m_0001_initial
[1m[35m Rolled Back[0m Migration rollback_dependent::m_0001_initial
[1m[95mRolling Back[0m Migration rollback_app1::m_0002_second
[1m[35m Rolled Back[0m Migration rollback_app1::m_0002_second
