cot/tests/db_testing/snapshots/migrations/db__db_testing__migrations__migration_engine_rollback_zero_dry_run.snap
---
source: cot/tests/db_testing/migrations.rs
expression: dry_run_output
---
Rollback dry run

Target:
  app:       rollback_app1
  migration: zero
  mode:      zero (all migrations in app rolled back)

Rollback plan:
  1. rollback_app1::m_0003_third
  2. rollback_app1::m_0002_second
  3. rollback_app1::m_0001_initial

Summary:
  to roll back:     3
  skipped:          0
  database changes: none
