cot/tests/db_testing/snapshots/migrations/db__db_testing__migrations__migration_graph_dot_unrelated_apps.snap
---
source: cot/tests/db_testing/migrations.rs
expression: dot
---
digraph migrations {
  rankdir=LR;
  splines=spline;
  nodesep=0.4;
  ranksep=0.6;
  bgcolor="transparent";

  graph [fontname="Helvetica,Arial,sans-serif"];
  node  [fontname="Helvetica,Arial,sans-serif", fontsize=11];
  edge  [fontname="Helvetica,Arial,sans-serif", fontsize=9];

  node [
    shape=box,
    style="rounded,filled",
    fillcolor="#eef2ff",
    color="#4c51bf",
    fontcolor="#1e1b4b",
    penwidth=1,
    margin="0.18,0.12"
  ];

  edge [
    color="#9aa5b1",
    penwidth=1.2,
    arrowsize=0.8
  ];

  subgraph cluster_0 {
    label="cot";
    style="rounded,filled";
    color="#d1d5db";
    fillcolor="#f9fafb";
    fontcolor="#374151";
    fontsize=12;
    margin=12;
    n0 [label="m_0001_initial"];
  }
  subgraph cluster_1 {
    label="cot_session";
    style="rounded,filled";
    color="#d1d5db";
    fillcolor="#f9fafb";
    fontcolor="#374151";
    fontsize=12;
    margin=12;
    n1 [label="m_0001_initial"];
  }
  subgraph cluster_2 {
    label="rollback_app1";
    style="rounded,filled";
    color="#d1d5db";
    fillcolor="#f9fafb";
    fontcolor="#374151";
    fontsize=12;
    margin=12;
    n2 [label="m_0001_initial"];
    n3 [label="m_0002_second"];
  }
  subgraph cluster_3 {
    label="rollback_app2";
    style="rounded,filled";
    color="#d1d5db";
    fillcolor="#f9fafb";
    fontcolor="#374151";
    fontsize=12;
    margin=12;
    n4 [label="m_0001_initial"];
  }

  n2 -> n3;
}
